Atualiza versão do do Spring para 3.4.3.