@@ -1,17 +1,18 @@
 package com.mycompany.javatodolistapitemplatev1.application.usecases;
 
+import java.util.concurrent.CompletableFuture;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
+import org.springframework.web.context.annotation.RequestScope;
+
 import com.mycompany.javatodolistapitemplatev1.application.dtos.responses.TodoUseCaseResponse;
 import com.mycompany.javatodolistapitemplatev1.application.interfaces.repositories.ITodoRepositoryAsync;
 import com.mycompany.javatodolistapitemplatev1.application.interfaces.useCases.IGetTodoUseCase;
 import com.mycompany.javatodolistapitemplatev1.application.mappers.TodoMapper;
 import com.mycompany.javatodolistapitemplatev1.shared.notification.abstractions.Notifiable;
 import com.mycompany.javatodolistapitemplatev1.shared.ultils.MsgUltil;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Service;
-import org.springframework.web.context.annotation.RequestScope;
-
-import java.util.concurrent.CompletableFuture;
 
 @Service
 @RequestScope
@@ -31,7 +32,7 @@ public class GetTodoUseCase extends Notifiable implements IGetTodoUseCase {
     @Override
     public CompletableFuture<TodoUseCaseResponse> runAsync(Long id) {
 
-        logger.info(String.format("Start useCase %s > method runAsync.", GetTodoUseCase.class.getSimpleName()));
+        logger.info("Start useCase %s > method runAsync.".formatted(GetTodoUseCase.class.getSimpleName()));
 
         Validate(id);
 
@@ -41,14 +42,16 @@ public class GetTodoUseCase extends Notifiable implements IGetTodoUseCase {
         var entity = todoRepositoryAsync.getAsync(id).join();
 
         if (entity == null) {
-            addErrorNotification(MsgUltil.DATA_OF_X0_X1_NOT_FOUND(null, null)[0], MsgUltil.DATA_OF_X0_X1_NOT_FOUND("Todo", Long.toString(id))[1]);
+            addErrorNotification(MsgUltil.DATA_OF_X0_X1_NOT_FOUND(null, null)[0],
+                    MsgUltil.DATA_OF_X0_X1_NOT_FOUND("Todo", Long.toString(id))[1]);
 
             return CompletableFuture.completedFuture(null);
         }
 
         var useCaseResponse = todoMapper.convertTodoUseCaseResponse(entity);
 
-        logger.info(String.format("Finishes successfully useCase %s > method runAsync.", GetTodoUseCase.class.getSimpleName()));
+        logger.info(
+                "Finishes successfully useCase %s > method runAsync.".formatted(GetTodoUseCase.class.getSimpleName()));
 
         return CompletableFuture.completedFuture(useCaseResponse);
     }
@@ -56,6 +59,7 @@ public class GetTodoUseCase extends Notifiable implements IGetTodoUseCase {
     private void Validate(long id) {
 
         if (id <= 0)
-            addErrorNotification(MsgUltil.IDENTIFIER_X0_IS_INVALID(null)[0], MsgUltil.IDENTIFIER_X0_IS_INVALID(Long.toString(id))[1]);
+            addErrorNotification(MsgUltil.IDENTIFIER_X0_IS_INVALID(null)[0],
+                    MsgUltil.IDENTIFIER_X0_IS_INVALID(Long.toString(id))[1]);
     }
 }
